--- a/package.json
+++ b/package.json
@@ -1,41 +1,49 @@
 {
   "name": "workspace-colorizer",
-  "displayName": "workspace-colorizer",
-  "description": "workspace colorizer",
+  "displayName": "Workspace Colorizer",
+  "publisher": "yourname",
   "version": "0.0.1",
   "engines": {
-    "vscode": "^1.104.0"
+    "vscode": "^1.93.0"
   },
-  "categories": [
-    "Other"
-  ],
-  "activationEvents": [],
+  "activationEvents": ["onStartupFinished"],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "workspace-colorizer.helloWorld",
-        "title": "Hello World"
+        "command": "workspaceColorizer.reset",
+        "title": "Workspace Colorizer: Reset Colors"
       }
-    ]
+    ],
+    "configuration": {
+      "title": "Workspace Colorizer",
+      "properties": {
+        "workspaceColorizer.folderColors": {
+          "type": "object",
+          "default": {
+            "sample1": "#1E90FF",
+            "sample2": "#32CD32",
+            "sample3": "#FFD700"
+          },
+          "markdownDescription": "ワークスペース内フォルダ名（または正規表現）→ タイトルバー色（#RRGGBB）。最初にマッチしたエントリが使われます。"
+        },
+        "workspaceColorizer.statusBarSync": {
+          "type": "boolean",
+          "default": true,
+          "description": "タイトルバーと同じ色を Status Bar にも適用する"
+        }
+      }
+    }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
+    "vscode:prepublish": "npm run build",
+    "build": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
-    "lint": "eslint src",
-    "test": "vscode-test"
+    "package": "vsce package"
   },
   "devDependencies": {
-    "@types/vscode": "^1.104.0",
-    "@types/mocha": "^10.0.10",
-    "@types/node": "22.x",
-    "@typescript-eslint/eslint-plugin": "^8.45.0",
-    "@typescript-eslint/parser": "^8.45.0",
-    "eslint": "^9.36.0",
-    "typescript": "^5.9.3",
-    "@vscode/test-cli": "^0.0.11",
-    "@vscode/test-electron": "^2.5.2"
+    "@types/vscode": "^1.93.0",
+    "typescript": "^5.6.3",
+    "@vscode/test-electron": "^2.4.1"
   }
 }
